fix button alignment on reviews admin bar

--- a/opentech/static_src/src/sass/apply/components/_wrapper.scss
+++ b/opentech/static_src/src/sass/apply/components/_wrapper.scss
@@ -321,4 +321,13 @@
             cursor: all-scroll;
         }
     }
+
+    &--reviews {
+        @include media-query(tablet-portrait) {
+            display: flex;
+            align-items: center;
+            flex-direction: row;
+            justify-content: space-between;
+        }
+    }
 }
